# gltf-viewer

./: CMakeLists.txt  Loader.cpp  Loader.hpp  Taskfile.yml  conanfile.txt  install.sh  main.cpp
src/: main.cpp
src/loader/: CMakeLists.txt  Loader.cpp  Loader.hpp  Model.cpp
src/loader/vk/: Device.hpp  Pipeline.hpp  Shader.hpp
